--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-slate
 title: MikeCampbell.biz
-description: Welcome to my web site! It's my personal sandbox where I collect content from the web.
+description: Faith, Family, and Finance
