--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-slate
-title: 2Peter318
-description: Faith, Family, and Finance
+title: Faither, Family and Finance
+description: ---
