--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-slate
-title: Faith, Family and Finance
-description: 
+title: Grow in Grace and Knowledge
+description: 2 Peter 3:18
